snippets/chapter1/webserver-configmap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      volumes:
      - name: config
        configMap:
          name: webserver-config
          items:
          - key: 404.html
            path: 404.html
          - key: my.conf
            path: my.conf
      containers:
      - name: webserver
        image: nginxinc/nginx-unprivileged:1.22
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/etc/nginx/conf.d/default.conf"
          name: config
          subPath: my.conf
        - mountPath: "/usr/share/nginx/html/404.html"
          name: config
          subPath: 404.html
