snippets/chapter1/webserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  containers:
  - name: webserver
    image: nginxinc/nginx-unprivileged
    ports:
    - containerPort: 8080
