snippets/chapter1/webserver-pvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: ws-claim
      containers:
      - name: webserver
        image: nginx:1.20.1
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: html
